fixed positioning of overlapping file upload button

--- a/python/webinterface/webinterface/static/css/validation-form-helper.css
+++ b/python/webinterface/webinterface/static/css/validation-form-helper.css
@@ -2,7 +2,7 @@
     margin-top: -2.35rem;
     opacity: 0;
     width: 10.5rem;
-    margin-left: 1.2rem;
+    margin-left: 1rem;
 }
 
 .form-group input[type="text"], .form-group input[type="file"], .form-group select, .form-group button {
